--- a/common.rc
+++ b/common.rc
@@ -77,6 +77,9 @@ _mount_opts()
 	# acls aren't turned on by default on gfs2
 	export MOUNT_OPTIONS="-o acl $GFS2_MOUNT_OPTIONS"
 	;;
+    logfs)
+	export MOUNT_OPTIONS="$LOGFS_MOUNT_OPTIONS"
+	;;	
     *)
 	;;
     esac
@@ -314,7 +317,7 @@ _scratch_mkfs()
         $MKFS_BTRFS_PROG $MKFS_OPTIONS $* $SCRATCH_DEV > /dev/null
 	;;
     *)
-	/sbin/mkfs -t $FSTYP -- $MKFS_OPTIONS $* $SCRATCH_DEV
+	yes | ${MKFS_PROG} -t $FSTYP -- $MKFS_OPTIONS $* $SCRATCH_DEV
 	;;
     esac
 }
@@ -337,6 +340,9 @@ _scratch_mkfs_sized()
 	;;
     btrfs)
 	$MKFS_BTRFS_PROG $MKFS_OPTIONS -b $fssize $SCRATCH_DEV
+	;;
+    logfs)
+	yes | ${MKFS_PROG}.logfs ${MKFS_OPTIONS} $SCRATCH_DEV
 	;;
     *)
 	_notrun "Filesystem $FSTYP not supported in _scratch_mkfs_sized"
