--- a/common.rc
+++ b/common.rc
@@ -316,6 +316,9 @@ _scratch_mkfs()
     btrfs)
         $MKFS_BTRFS_PROG $MKFS_OPTIONS $* $SCRATCH_DEV > /dev/null
 	;;
+    logfs)
+	yes  yes | ${MKFS_PROG}.logfs ${MKFS_OPTIONS} $SCRATCH_DEV
+	;;
     *)
 	yes | ${MKFS_PROG} -t $FSTYP -- $MKFS_OPTIONS $* $SCRATCH_DEV
 	;;
@@ -342,7 +345,7 @@ _scratch_mkfs_sized()
 	$MKFS_BTRFS_PROG $MKFS_OPTIONS -b $fssize $SCRATCH_DEV
 	;;
     logfs)
-	yes | ${MKFS_PROG}.logfs ${MKFS_OPTIONS} $SCRATCH_DEV
+	yes yes | ${MKFS_PROG}.logfs ${MKFS_OPTIONS} $SCRATCH_DEV
 	;;
     *)
 	_notrun "Filesystem $FSTYP not supported in _scratch_mkfs_sized"
